--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <span>C</span>
         <span>E</span>
         <span>&nbsp;</span>
+        <span>&nbsp;</span>
+        <span>&nbsp;</span>
         <span>M</span>
         <span>O</span>
         <span>J</span>
@@ -48,6 +50,14 @@
         </button>
         
     </div>
+
+    <script>
+        const pass = prompt("Upiši lozinku ❤️");
+
+        if(pass !== "lara123"){
+            document.body.innerHTML = "<h1>❤️</h1>";
+        }
+    </script>
 
     <script src="./js/audio.js"></script>
 </body>
