--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <span>I</span>
         <span>C</span>
         <span>E</span>
-        <span>&nbsp;</span>
-        <span>&nbsp;</span>
-        <span>&nbsp;</span>
+        <span>&nbsp;</span><br>
         <span>M</span>
         <span>O</span>
         <span>J</span>
@@ -62,3 +60,4 @@
     <script src="./js/audio.js"></script>
 </body>
 </html>
+
